Add Discord icon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,8 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.3/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.3/js/v4-shims.js"></script>
   <link rel="stylesheet" href="themes/default/styles.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
