Add more branding img

--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -218,6 +218,17 @@ img.centered.download-buttons-store {
   margin: auto;
 }
 
+h2.assets-title {
+    color: #555;
+}
+
+.assets-image {
+  height: 80px;
+  opacity: 0.9;
+  display: block;
+  margin: auto;
+}
+
 .feature-title {
   margin-top: 20px;
   font-size: 24px;
