Add youtube to social

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -7,6 +7,8 @@
 
 	{% if site.social-links.github %}<li><a href="https://medium.com/@trustwallet" target="_blank" class="link-white"><i class="fa fa-medium fa-lg"></i></a></li>{% endif %}
 
+	{% if site.social-links.github %}<li><a href="https://www.youtube.com/channel/UCrYnRK55nYUDd6flEZ2Kf6g/videos" target="_blank" class="link-white"><i class="fa fa-youtube fa-lg"></i></a></li>{% endif %}
+
 	{% if site.social-links.twitter %}<li><a href="https://twitter.com/{{ site.social-links.twitter }}" target="_blank" class="link-white"><i class="fa fa-twitter fa-lg"></i></a></li>{% endif %}
 
 	{% if site.social-links.facebook %}<li><a href="https://facebook.com/{{ site.social-links.facebook }}" target="_blank" class="link-white"><i class="fa fa-facebook-square fa-lg"></i></a></li>{% endif %}
