--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,23 +1,17 @@
 <ul class="social-links">
 	{% if site.social-links.github %}<li><a href="https://github.com/{{ site.social-links.github }}" target="_blank" class="link-white"><i class="fa fa-github fa-lg"></i></a></li>{% endif %}
 
-	{% if site.social-links.github %}<li><a href="https://discord.gg/kUXyamd" target="_blank" class="link-white"><i class="fab fa-discord fa-lg"></i></a></li>{% endif %}
+	{% if site.social-links.discord %}<li><a href="https://discord.gg/{{ site.social-links.discord }}" target="_blank" class="link-white"><i class="fab fa-discord fa-lg"></i></a></li>{% endif %}
 
-	{% if site.social-links.github %}<li><a href="https://reddit.com/r/trustapp/" target="_blank" class="link-white"><i class="fa fa-reddit fa-lg"></i></a></li>{% endif %}
+	{% if site.social-links.reddit %}<li><a href="https://reddit.com/r/{{ site.social-links.reddit }}" target="_blank" class="link-white"><i class="fa fa-reddit fa-lg"></i></a></li>{% endif %}
 
-	{% if site.social-links.github %}<li><a href="https://medium.com/@trustwallet" target="_blank" class="link-white"><i class="fa fa-medium fa-lg"></i></a></li>{% endif %}
+	{% if site.social-links.medium %}<li><a href="https://medium.com/@{{ site.social-links.medium }}" target="_blank" class="link-white"><i class="fa fa-medium fa-lg"></i></a></li>{% endif %}
 
 	{% if site.social-links.youtube %}<li><a href="https://youtube.com/{{ site.social-links.youtube }}" target="_blank" class="link-white"><i class="fa fa-youtube fa-lg"></i></a></li>{% endif %}
 
 	{% if site.social-links.twitter %}<li><a href="https://twitter.com/{{ site.social-links.twitter }}" target="_blank" class="link-white"><i class="fa fa-twitter fa-lg"></i></a></li>{% endif %}
 
 	{% if site.social-links.facebook %}<li><a href="https://facebook.com/{{ site.social-links.facebook }}" target="_blank" class="link-white"><i class="fa fa-facebook-square fa-lg"></i></a></li>{% endif %}
-
-	{% if site.social-links.instagram %}<li><a href="https://instagram.com/{{ site.social-links.instagram }}" target="_blank" class="link-white"><i class="fa fa-instagram fa-lg"></i></a></li>{% endif %}
-
-	{% if site.social-links.pinterest %}<li><a href="https://pinterest.com/{{ site.social-links.pinterest }}" target="_blank" class="link-white"><i class="fa fa-pinterest fa-lg"></i></a></li>{% endif %}
-
-	{% if site.social-links.googleplus %}<li><a href="https://plus.google.com/{{ site.social-links.googleplus }}" target="_blank" class="link-white"><i class="fa fa-google-plus fa-lg"></i></a></li>{% endif %}
 
 	{% if site.social-links.email %}<li><a href="mailto:{{ site.social-links.email }}" target="_blank" class="link-white"><i class="fa fa-envelope-o fa-lg"></i></a></li>{% endif %}
 </ul>
