--- a/themes/default/styles.scss
+++ b/themes/default/styles.scss
@@ -159,6 +159,7 @@ img.centered.download-buttons-store {
 
 .social-links {
   padding: 0;
+  display: flex;
   list-style: none;
   justify-content: center;
   align-items: center;
