--- a/faq.css
+++ b/faq.css
@@ -560,6 +560,10 @@ footer span {
     right: 0
 }
 
+h2.faq-title {
+    font-size: 30px;
+}
+
 .catalogue-item {
     border-bottom: 1px solid #e5e5e5;
     color: #555;
@@ -608,6 +612,10 @@ footer span {
 
 
 @media screen and (max-width: 400px) {
+    h2.faq-title {
+        font-size: 24px;
+    }
+    
     .post-title {
         color: #353535;
         font-family: "Helvetica Neue", "Segoe UI", Helvetica, Arial, sans-serif;
